deployment.apps.busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"allow.http":"false","application":"busybox"},"name":"busybox","namespace":"syspass"},"spec":{"replicas":1,"selector":{"matchLabels":{"application":"busybox"}},"template":{"metadata":{"labels":{"application":"busybox"}},"spec":{"containers":[{"args":["tail -F anything"],"command":["/bin/sh","-c"],"image":"busybox:latest","name":"busybox"}]}}}}
  creationTimestamp: "2023-02-20T14:46:01Z"
  generation: 1
  labels:
    allow.http: "false"
    application: busybox
  name: busybox
  namespace: syspass
  resourceVersion: "635563"
  uid: a4359f01-4136-48a6-ad6f-93ba1f89c1ca
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      application: busybox
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: busybox
    spec:
      containers:
      - args:
        - tail -F anything
        command:
        - /bin/sh
        - -c
        image: busybox:latest
        imagePullPolicy: Always
        name: busybox
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-02-20T14:46:01Z"
    lastUpdateTime: "2023-02-20T14:46:06Z"
    message: ReplicaSet "busybox-6bd5497577" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-02-21T11:19:57Z"
    lastUpdateTime: "2023-02-21T11:19:57Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
