deployment.apps.syspass-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"allow.http":"false","application":"syspass-db"},"name":"syspass-db","namespace":"syspass"},"spec":{"replicas":1,"selector":{"matchLabels":{"application":"syspass-db"}},"template":{"metadata":{"labels":{"application":"syspass-db"}},"spec":{"containers":[{"image":"pedroaugustoferreira/syspass-db:v1","name":"syspass-db"}]}}}}
  creationTimestamp: "2023-02-20T14:41:48Z"
  generation: 5
  labels:
    allow.http: "false"
    application: syspass-db
  name: syspass-db
  namespace: syspass
  resourceVersion: "642120"
  uid: e378cb79-b941-4d23-862c-ea695c64c0ba
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      application: syspass-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: syspass-db
    spec:
      affinity: {}
      containers:
      - image: pedroaugustoferreira/syspass-db:v1
        imagePullPolicy: IfNotPresent
        name: syspass-db
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: volume-syspass-db
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: volume-syspass-db
        persistentVolumeClaim:
          claimName: volume-syspass-db
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-02-20T14:41:48Z"
    lastUpdateTime: "2023-02-20T14:57:23Z"
    message: ReplicaSet "syspass-db-6c8b65fb6b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-02-21T11:45:22Z"
    lastUpdateTime: "2023-02-21T11:45:22Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
