deployment.apps.syspass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.100.121"],"port":80,"protocol":"HTTP","serviceName":"syspass:service-syspass","ingressName":"syspass:ingress-syspass-app","hostname":"syspass.ks8","path":"/","allNodes":true}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"allow.http":"false","application":"syspass"},"name":"syspass","namespace":"syspass"},"spec":{"replicas":1,"selector":{"matchLabels":{"application":"syspass"}},"template":{"metadata":{"labels":{"application":"syspass"}},"spec":{"containers":[{"image":"pedroaugustoferreira/syspass-app:v1","name":"syspass-app","ports":[{"containerPort":80}],"securityContext":{"privileged":true}}]}}}}
  creationTimestamp: "2023-02-20T14:38:40Z"
  generation: 5
  labels:
    allow.http: "false"
    application: syspass
  name: syspass
  namespace: syspass
  resourceVersion: "642125"
  uid: 0b32f500-8a46-46b5-b153-e6d874ef7cff
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      application: syspass
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        application: syspass
    spec:
      affinity: {}
      containers:
      - image: pedroaugustoferreira/syspass-app:v1
        imagePullPolicy: IfNotPresent
        name: syspass-app
        ports:
        - containerPort: 80
          name: 80tcp
          protocol: TCP
        resources: {}
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/html/sysPass/app/config
          name: volume-syspass-app
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: volume-syspass-app
        persistentVolumeClaim:
          claimName: volume-syspass-app
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-02-20T14:38:40Z"
    lastUpdateTime: "2023-02-21T10:55:23Z"
    message: ReplicaSet "syspass-7c874b7d98" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-02-21T11:45:22Z"
    lastUpdateTime: "2023-02-21T11:45:22Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
