ingress.syspass.app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.100.121"],"port":80,"protocol":"HTTP","serviceName":"syspass:service-syspass","ingressName":"syspass:ingress-syspass-app","hostname":"syspass.ks8","path":"/","allNodes":true}]'
  creationTimestamp: "2023-02-21T11:18:31Z"
  generation: 1
  name: ingress-syspass-app
  namespace: syspass
  resourceVersion: "635160"
  uid: eda98c90-3cbb-4451-9d0d-4877c96204b0
spec:
  ingressClassName: nginx
  rules:
  - host: syspass.ks8
    http:
      paths:
      - backend:
          service:
            name: service-syspass
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.100.121
